--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          external_repository: jtpio/scratchpad
+          external_repository: jtpio/p5-notebook-demo
           publish_dir: ./dist
           publish_branch: gh-pages
