Add favicon to the deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create dist directory
         run: |
           mkdir -p dist/build/
-          mv index.html dist/
+          mv index.html favicon.ico dist/
           mv build/bundle.js dist/build/
 
       - name: Deploy
