--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
   },
   "devDependencies": {
     "@types/codemirror": "^0.0.76",
-    "@types/node": "^13.9.1",
     "css-loader": "~3.2.0",
+    "fs-extra": "^9.0.0",
     "mini-css-extract-plugin": "~0.8.0",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
