--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "@lumino/disposable": "^1.3.5",
     "@lumino/signaling": "^1.3.5",
     "@lumino/widgets": "^1.11.1",
+    "jupyterlab-topbar-extension": "^0.5.0",
     "es6-promise": "~4.2.8",
     "mock-socket": "^9.0.3",
     "p5": "^1.0.0"
   },
   "devDependencies": {
     "@types/codemirror": "^0.0.76",
+    "@types/node": "^13.9.3",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "css-loader": "~3.2.0",
