--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "target": "es2017",
-    "types": []
+    "types": ["node"]
   },
   "include": ["src/**/*"]
 }
