--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^2.0.2",
+    "@jupyterlab/apputils": "^2.0.2",
     "@jupyterlab/cells": "^2.0.2",
     "@jupyterlab/codemirror": "^2.0.2",
     "@jupyterlab/completer": "^2.0.2",
@@ -49,7 +50,6 @@
     "@lumino/disposable": "^1.3.5",
     "@lumino/signaling": "^1.3.5",
     "@lumino/widgets": "^1.11.1",
-    "jupyterlab-topbar-extension": "^0.5.0",
     "es6-promise": "~4.2.8",
     "mock-socket": "^9.0.3",
     "p5": "^1.0.0"
