Add shortcuts extension to toggle theme with kbd

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@jupyterlab/rendermime": "^2.0.2",
     "@jupyterlab/services": "^5.0.2",
     "@jupyterlab/settingregistry": "^2.0.1",
+    "@jupyterlab/shortcuts-extension": "^2.0.2",
     "@jupyterlab/theme-dark-extension": "^2.0.2",
     "@jupyterlab/theme-light-extension": "^2.0.2",
     "@jupyterlab/ui-components": "^2.0.2",
