--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@jupyterlab/documentsearch": "^2.0.2",
     "@jupyterlab/mainmenu": "^2.0.2",
     "@jupyterlab/mathjax2": "^2.0.1",
+    "@jupyterlab/nbformat": "^2.0.1",
     "@jupyterlab/notebook": "^2.0.2",
     "@jupyterlab/observables": "^3.0.1",
     "@jupyterlab/rendermime": "^2.0.2",
