--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "@jupyterlab/rendermime": "^2.0.2",
     "@jupyterlab/services": "^5.0.2",
     "@jupyterlab/settingregistry": "^2.0.1",
-    "@jupyterlab/statedb": "^2.0.1",
     "@jupyterlab/shortcuts-extension": "^2.0.2",
+    "@jupyterlab/statedb": "^2.0.1",
     "@jupyterlab/theme-dark-extension": "^2.0.2",
     "@jupyterlab/theme-light-extension": "^2.0.2",
     "@jupyterlab/ui-components": "^2.0.2",
@@ -57,9 +57,9 @@
     "@lumino/disposable": "^1.3.5",
     "@lumino/signaling": "^1.3.5",
     "@lumino/widgets": "^1.11.1",
-    "jupyterlab-topbar-extension": "^0.5.0",
-    "jupyterlab-theme-toggle": "^0.5.0",
     "es6-promise": "~4.2.8",
+    "jupyterlab-theme-toggle": "^0.5.0",
+    "jupyterlab-topbar-extension": "^0.5.0",
     "mock-socket": "^9.0.3",
     "p5": "^1.0.0",
     "react": "~16.9.0",
@@ -84,6 +84,7 @@
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
     "rimraf": "~3.0.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "~1.0.1",
     "svg-url-loader": "~3.0.3",
     "typescript": "~3.8.3",
