--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "prettier": "prettier --write '**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}'",
     "prettier:check": "prettier --list-different \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
     "eslint": "eslint . --ext .ts,.tsx --fix",
-    "eslint:check": "eslint . --ext .ts,.tsx"
+    "eslint:check": "eslint . --ext .ts,.tsx",
+    "watch:ts": "tsc -w --listEmittedFiles",
+    "watch:webpack": "webpack --watch",
+    "watch": "npm-run-all --parallel watch:ts watch:webpack"
   },
   "dependencies": {
     "@jupyterlab/application": "^2.0.2",
@@ -81,6 +84,7 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.4.3",
     "mini-css-extract-plugin": "~0.8.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
     "rimraf": "~3.0.0",
