--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@lumino/signaling": "^1.3.5",
     "@lumino/widgets": "^1.11.1",
     "es6-promise": "~4.2.8",
+    "jupyterlab-cell-flash": "^0.1.0",
     "jupyterlab-theme-toggle": "^0.5.0",
     "jupyterlab-topbar-extension": "^0.5.0",
     "mock-socket": "^9.0.3",
@@ -72,8 +73,8 @@
   "devDependencies": {
     "@types/codemirror": "^0.0.76",
     "@types/node": "^13.9.3",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "css-loader": "~3.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
