--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "p5-notebook",
+  "private": true,
   "version": "0.1.0",
   "description": "A minimal Jupyter Notebook UI for p5.js kernels",
   "license": "BSD-3-Clause",
@@ -33,29 +34,29 @@
     "watch": "npm-run-all --parallel watch:ts watch:webpack"
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.0.2",
-    "@jupyterlab/apputils": "^2.0.2",
-    "@jupyterlab/apputils-extension": "^2.0.2",
-    "@jupyterlab/cells": "^2.0.2",
-    "@jupyterlab/codemirror": "^2.0.2",
-    "@jupyterlab/completer": "^2.0.2",
+    "@jupyterlab/application": "^3.0.0-rc.6",
+    "@jupyterlab/apputils": "^3.0.0-rc.6",
+    "@jupyterlab/apputils-extension": "^3.0.0-rc.6",
+    "@jupyterlab/cells": "^3.0.0-rc.6",
+    "@jupyterlab/codemirror": "^3.0.0-rc.6",
+    "@jupyterlab/completer": "^3.0.0-rc.6",
     "@jupyterlab/coreutils": "^4.0.2",
-    "@jupyterlab/docmanager": "^2.0.2",
-    "@jupyterlab/docregistry": "^2.0.2",
-    "@jupyterlab/documentsearch": "^2.0.2",
-    "@jupyterlab/mainmenu": "^2.0.2",
-    "@jupyterlab/mathjax2": "^2.0.1",
-    "@jupyterlab/nbformat": "^2.0.1",
-    "@jupyterlab/notebook": "^2.0.2",
+    "@jupyterlab/docmanager": "^3.0.0-rc.6",
+    "@jupyterlab/docregistry": "^3.0.0-rc.6",
+    "@jupyterlab/documentsearch": "^3.0.0-rc.6",
+    "@jupyterlab/mainmenu": "^3.0.0-rc.6",
+    "@jupyterlab/mathjax2": "^3.0.0-rc.6",
+    "@jupyterlab/nbformat": "^3.0.0-rc.6",
+    "@jupyterlab/notebook": "^3.0.0-rc.6",
     "@jupyterlab/observables": "^3.0.1",
-    "@jupyterlab/rendermime": "^2.0.2",
-    "@jupyterlab/services": "^5.0.2",
-    "@jupyterlab/settingregistry": "^2.0.1",
-    "@jupyterlab/shortcuts-extension": "^2.0.2",
-    "@jupyterlab/statedb": "^2.0.1",
-    "@jupyterlab/theme-dark-extension": "^2.0.2",
-    "@jupyterlab/theme-light-extension": "^2.0.2",
-    "@jupyterlab/ui-components": "^2.0.2",
+    "@jupyterlab/rendermime": "^3.0.0-rc.6",
+    "@jupyterlab/services": "^6.0.0-rc.6",
+    "@jupyterlab/settingregistry": "^3.0.0-rc.6",
+    "@jupyterlab/shortcuts-extension": "^3.0.0-rc.6",
+    "@jupyterlab/statedb": "^3.0.0-rc.6",
+    "@jupyterlab/theme-dark-extension": "^3.0.0-rc.6",
+    "@jupyterlab/theme-light-extension": "^3.0.0-rc.6",
+    "@jupyterlab/ui-components": "^3.0.0-rc.6",
     "@lumino/algorithm": "^1.2.3",
     "@lumino/commands": "^1.10.1",
     "@lumino/coreutils": "^1.4.2",
@@ -63,17 +64,18 @@
     "@lumino/signaling": "^1.3.5",
     "@lumino/widgets": "^1.11.1",
     "es6-promise": "~4.2.8",
-    "jupyterlab-cell-flash": "^0.2.2",
-    "jupyterlab-theme-toggle": "^0.5.0",
-    "jupyterlab-topbar-extension": "^0.5.0",
+    "jupyterlab-cell-flash": "^0.3.0",
+    "jupyterlab-theme-toggle": "^0.6.0",
+    "jupyterlab-topbar-extension": "^0.6.0",
     "mock-socket": "^9.0.3",
-    "p5": "^1.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "p5": "^1.1.9",
+    "react": "~16.13.0",
+    "react-dom": "~16.13.0",
     "strip-json-comments": "^3.0.1"
   },
   "devDependencies": {
-    "@types/codemirror": "^0.0.76",
+    "@jupyterlab/builder": "^3.0.0-rc.6",
+    "@types/codemirror": "^0.0.97",
     "@types/node": "^13.9.3",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
@@ -83,6 +85,7 @@
     "eslint-plugin-jsdoc": "^22.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "file-loader": "~6.0.0",
     "fs-extra": "^9.0.0",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.3",
@@ -97,13 +100,13 @@
     "typescript": "~3.8.3",
     "url-loader": "~3.0.0",
     "watch": "~1.0.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^5.3.1",
+    "webpack-cli": "^4.1.0",
     "whatwg-fetch": "^3.0.0"
   },
   "resolutions": {
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0"
+    "react": "~16.13.0",
+    "react-dom": "~16.13.0"
   },
   "husky": {
     "hooks": {
