--- a/package.json
+++ b/package.json
@@ -34,29 +34,29 @@
     "watch": "npm-run-all --parallel watch:ts watch:webpack"
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.0.0-rc.6",
-    "@jupyterlab/apputils": "^3.0.0-rc.6",
-    "@jupyterlab/apputils-extension": "^3.0.0-rc.6",
-    "@jupyterlab/cells": "^3.0.0-rc.6",
-    "@jupyterlab/codemirror": "^3.0.0-rc.6",
-    "@jupyterlab/completer": "^3.0.0-rc.6",
-    "@jupyterlab/coreutils": "^4.0.2",
-    "@jupyterlab/docmanager": "^3.0.0-rc.6",
-    "@jupyterlab/docregistry": "^3.0.0-rc.6",
-    "@jupyterlab/documentsearch": "^3.0.0-rc.6",
-    "@jupyterlab/mainmenu": "^3.0.0-rc.6",
-    "@jupyterlab/mathjax2": "^3.0.0-rc.6",
-    "@jupyterlab/nbformat": "^3.0.0-rc.6",
-    "@jupyterlab/notebook": "^3.0.0-rc.6",
+    "@jupyterlab/application": "^3.0.0-rc.7",
+    "@jupyterlab/apputils": "^3.0.0-rc.7",
+    "@jupyterlab/apputils-extension": "^3.0.0-rc.7",
+    "@jupyterlab/cells": "^3.0.0-rc.7",
+    "@jupyterlab/codemirror": "^3.0.0-rc.7",
+    "@jupyterlab/completer": "^3.0.0-rc.7",
+    "@jupyterlab/coreutils": "^5.0.0-rc.7",
+    "@jupyterlab/docmanager": "^3.0.0-rc.7",
+    "@jupyterlab/docregistry": "^3.0.0-rc.7",
+    "@jupyterlab/documentsearch": "^3.0.0-rc.7",
+    "@jupyterlab/mainmenu": "^3.0.0-rc.7",
+    "@jupyterlab/mathjax2": "^3.0.0-rc.7",
+    "@jupyterlab/nbformat": "^3.0.0-rc.7",
+    "@jupyterlab/notebook": "^3.0.0-rc.7",
     "@jupyterlab/observables": "^3.0.1",
-    "@jupyterlab/rendermime": "^3.0.0-rc.6",
-    "@jupyterlab/services": "^6.0.0-rc.6",
-    "@jupyterlab/settingregistry": "^3.0.0-rc.6",
-    "@jupyterlab/shortcuts-extension": "^3.0.0-rc.6",
-    "@jupyterlab/statedb": "^3.0.0-rc.6",
-    "@jupyterlab/theme-dark-extension": "^3.0.0-rc.6",
-    "@jupyterlab/theme-light-extension": "^3.0.0-rc.6",
-    "@jupyterlab/ui-components": "^3.0.0-rc.6",
+    "@jupyterlab/rendermime": "^3.0.0-rc.7",
+    "@jupyterlab/services": "^6.0.0-rc.7",
+    "@jupyterlab/settingregistry": "^3.0.0-rc.7",
+    "@jupyterlab/shortcuts-extension": "^3.0.0-rc.7",
+    "@jupyterlab/statedb": "^3.0.0-rc.7",
+    "@jupyterlab/theme-dark-extension": "^3.0.0-rc.7",
+    "@jupyterlab/theme-light-extension": "^3.0.0-rc.7",
+    "@jupyterlab/ui-components": "^3.0.0-rc.7",
     "@lumino/algorithm": "^1.2.3",
     "@lumino/commands": "^1.10.1",
     "@lumino/coreutils": "^1.4.2",
@@ -74,7 +74,7 @@
     "strip-json-comments": "^3.0.1"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.0-rc.6",
+    "@jupyterlab/builder": "^3.0.0-rc.7",
     "@types/codemirror": "^0.0.97",
     "@types/node": "^13.9.3",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
