--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@jupyterlab/docmanager": "^3.0.0-rc.7",
     "@jupyterlab/docregistry": "^3.0.0-rc.7",
     "@jupyterlab/documentsearch": "^3.0.0-rc.7",
+    "@jupyterlab/launcher": "^3.0.0-rc.7",
     "@jupyterlab/mainmenu": "^3.0.0-rc.7",
     "@jupyterlab/mathjax2": "^3.0.0-rc.7",
     "@jupyterlab/nbformat": "^3.0.0-rc.7",
