Update to JupyterLite and the `p5-kernel` (#72)
* Clean up old code

* Remove build workflow for now

* Add jupyter_lite.json

* Add demo notebook

* Add appUrl

* Update appUrl

* Fix jupyter-lite.json

* Rename intro notebook

* Update deploy script

* Update deploy.sh

* Update deploy.sh

* Add custom logo

* Python packaging for lab extension

* Fix develop

* Disable `@jupyterlab/application-extension:logo`

* Install the extra extensions on deploy

* Disable retro logo

* Disable more upstream plugins

* Favicon

* Bigger p5 retro logo

* Update to alpha 11

* Update README.md

* Add language packs

--- a/requirements-deploy.txt
+++ b/requirements-deploy.txt
@@ -1,3 +1,11 @@
 jupyterlab~=3.1.0
-jupyterlite==0.1.0a10
+jupyterlab-language-pack-es-ES
+jupyterlab-language-pack-fr-FR
+jupyterlab-language-pack-it-IT
+jupyterlab-language-pack-pl-PL
+jupyterlab-language-pack-zh-CN
+jupyterlite==0.1.0a11
 jupyterlite-p5-kernel==0.1.0a11
+
+# install the extra extensions
+.
