--- a/package.json
+++ b/package.json
@@ -1,112 +1,74 @@
 {
-  "name": "p5-notebook",
+  "name": "@p5-notebook/root",
   "private": true,
   "version": "0.1.0",
-  "description": "A minimal Jupyter Notebook UI for p5.js kernels",
-  "license": "BSD-3-Clause",
-  "author": "Jeremy Tuloup",
   "keywords": [
-    "p5",
     "jupyter",
-    "notebook"
+    "jupyterlite",
+    "jupyterlite-extension"
   ],
   "homepage": "https://github.com/jtpio/p5-notebook",
   "bugs": {
     "url": "https://github.com/jtpio/p5-notebook/issues"
   },
+  "license": "BSD-3-Clause",
+  "author": {
+    "name": "Jeremy Tuloup",
+    "email": ""
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jtpio/p5-notebook.git"
   },
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
   "scripts": {
-    "build": "tsc && webpack",
-    "build:prod": "yarn run clean && tsc && webpack --mode=production",
-    "stage": "node stage.js",
-    "clean": "rimraf dist && rimraf build && rimraf tsconfig.tsbuildinfo",
-    "prepublishOnly": "npm run build",
-    "prettier": "prettier --write '**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}'",
-    "prettier:check": "prettier --list-different \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
+    "build": "lerna run build",
+    "build:prod": "lerna run build:prod",
+    "build:test": "lerna run build:test",
+    "bump:version": "lerna version --no-push --force-publish --no-git-tag-version --yes",
+    "clean": "lerna run clean",
+    "install": "lerna bootstrap",
+    "install:dev": "yarn run build:prod && yarn run develop",
+    "install:extension": "jupyter labextension develop --overwrite .",
     "eslint": "eslint . --ext .ts,.tsx --fix",
     "eslint:check": "eslint . --ext .ts,.tsx",
-    "watch:ts": "tsc -w --listEmittedFiles",
-    "watch:webpack": "webpack --watch",
-    "watch": "npm-run-all --parallel watch:ts watch:webpack"
-  },
-  "dependencies": {
-    "@jupyterlab/application": "^3.0.0-rc.9",
-    "@jupyterlab/apputils": "^3.0.0-rc.9",
-    "@jupyterlab/apputils-extension": "^3.0.0-rc.9",
-    "@jupyterlab/cells": "^3.0.0-rc.9",
-    "@jupyterlab/codemirror": "^3.0.0-rc.9",
-    "@jupyterlab/completer": "^3.0.0-rc.9",
-    "@jupyterlab/coreutils": "^5.0.0-rc.9",
-    "@jupyterlab/docmanager": "^3.0.0-rc.9",
-    "@jupyterlab/docregistry": "^3.0.0-rc.9",
-    "@jupyterlab/documentsearch": "^3.0.0-rc.9",
-    "@jupyterlab/launcher": "^3.0.0-rc.9",
-    "@jupyterlab/mainmenu": "^3.0.0-rc.9",
-    "@jupyterlab/mathjax2": "^3.0.0-rc.9",
-    "@jupyterlab/nbformat": "^3.0.0-rc.9",
-    "@jupyterlab/notebook": "^3.0.0-rc.9",
-    "@jupyterlab/observables": "^3.0.1",
-    "@jupyterlab/rendermime": "^3.0.0-rc.9",
-    "@jupyterlab/services": "^6.0.0-rc.9",
-    "@jupyterlab/settingregistry": "^3.0.0-rc.9",
-    "@jupyterlab/shortcuts-extension": "^3.0.0-rc.9",
-    "@jupyterlab/statedb": "^3.0.0-rc.9",
-    "@jupyterlab/theme-dark-extension": "^3.0.0-rc.9",
-    "@jupyterlab/theme-light-extension": "^3.0.0-rc.9",
-    "@jupyterlab/ui-components": "^3.0.0-rc.9",
-    "@lumino/algorithm": "^1.2.3",
-    "@lumino/commands": "^1.10.1",
-    "@lumino/coreutils": "^1.4.2",
-    "@lumino/disposable": "^1.3.5",
-    "@lumino/signaling": "^1.3.5",
-    "@lumino/widgets": "^1.11.1",
-    "es6-promise": "~4.2.8",
-    "jupyterlab-cell-flash": "^0.3.0",
-    "jupyterlab-theme-toggle": "^0.6.1",
-    "jupyterlab-topbar-extension": "^0.6.0",
-    "mock-socket": "^9.0.3",
-    "p5": "^1.1.9",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "strip-json-comments": "^3.0.1"
+    "lint": "yarn run eslint && yarn run prettier",
+    "lint:check": "yarn run eslint:check && yarn run prettier:check",
+    "prettier": "prettier --write \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
+    "prettier:check": "prettier --list-different \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
+    "publish": "yarn run clean && yarn run build && lerna publish",
+    "test": "lerna run test",
+    "watch": "lerna run watch"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.0-rc.9",
-    "@types/codemirror": "^0.0.97",
-    "@types/node": "^13.9.3",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "css-loader": "~3.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-jsdoc": "^22.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "file-loader": "~6.0.0",
-    "fs-extra": "^9.0.0",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.4.3",
-    "mini-css-extract-plugin": "~0.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "lerna": "^4.0.0",
+    "lint-staged": "^10.4.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "raw-loader": "^4.0.0",
-    "rimraf": "~3.0.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "~1.0.1",
-    "svg-url-loader": "~3.0.3",
-    "typescript": "~3.8.3",
-    "url-loader": "~3.0.0",
-    "watch": "~1.0.2",
-    "webpack": "^5.3.1",
-    "webpack-cli": "^4.1.0",
-    "whatwg-fetch": "^3.0.0"
+    "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "shell-quote": "^1.7.2"
   },
-  "husky": {
+  "jupyter-releaser": {
+    "skip": ["check-links"],
+    "options": {
+      "version-cmd": [
+        "jlpm run bump:version"
+      ]
+    },
     "hooks": {
-      "pre-commit": "lint-staged"
+      "before-bump-version": [
+        "python -m pip install jupyterlab~=3.1",
+        "jlpm"
+      ]
     }
   }
 }
