Add theme and default settings in `overrides.json` (#74)
* Add p5 theme

* Fix theme packaging

* Add `overrides.json`

* Update to @p5-notebook/theme-light for consistency

* Fix dependencies

* Add build workflow

* Lint pass

* More naming

* Fix manifest ignore

* Fix manifest

* Update manifest

* Fix syntax

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,4 @@ build_cmd = "build:prod"
 npm = ["jlpm"]
 
 [tool.check-manifest]
-ignore = ["p5_notebook/labextension/**", "yarn.lock", ".*", "*.json", "packages/**"]
+ignore = ["p5_notebook/labextension/**", "p5_notebook/p5-theme-light/**", "yarn.lock", ".*", "*.json", "*.ico", "demo/**", "*.sh", "requirements-deploy.txt", "packages/**"]
