Add dark p5 theme

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,7 @@ jobs:
 
         jupyter labextension list 2>&1 | grep -ie "@p5-notebook/lab-extension.*OK"
         jupyter labextension list 2>&1 | grep -ie "@p5-notebook/p5-theme-light.*OK"
+        jupyter labextension list 2>&1 | grep -ie "@p5-notebook/p5-theme-dark.*OK"
 
         check-manifest -v
 
@@ -96,4 +97,5 @@ jobs:
         pip install jupyterlab
         jupyter labextension list 2>&1 | grep -ie "@p5-notebook/lab-extension.*OK"
         jupyter labextension list 2>&1 | grep -ie "@p5-notebook/p5-theme-light.*OK"
+        jupyter labextension list 2>&1 | grep -ie "@p5-notebook/p5-theme-dark.*OK"
         python -m jupyterlab.browser_check --no-chrome-test
