--- a/packages/lab-extension/package.json
+++ b/packages/lab-extension/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^3.1.13",
+    "@jupyterlab/coreutils": "^5.1.13",
     "@jupyterlab/ui-components": "^3.1.13",
     "@lumino/widgets": "^1.28.0",
     "@retrolab/application": "^0.3.7"
