--- a/packages/lab-extension/package.json
+++ b/packages/lab-extension/package.json
@@ -49,16 +49,16 @@
     "watch:src": "tsc -w"
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.1.13",
-    "@jupyterlab/coreutils": "^5.1.13",
-    "@jupyterlab/ui-components": "^3.1.13",
-    "@lumino/widgets": "^1.28.0",
-    "@retrolab/application": "^0.3.7"
+    "@jupyter-notebook/application": "^7.0.0",
+    "@jupyterlab/application": "^4.0.0",
+    "@jupyterlab/coreutils": "^6.0.0",
+    "@jupyterlab/ui-components": "^4.0.0",
+    "@lumino/widgets": "^2.0.0"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.1.0",
+    "@jupyterlab/builder": "^4.0.0",
     "rimraf": "~3.0.0",
-    "typescript": "~4.2.3"
+    "typescript": "~5.0.0"
   },
   "publishConfig": {
     "access": "public"
