--- a/pixi.toml
+++ b/pixi.toml
@@ -7,7 +7,7 @@ platforms = ["linux-64"]
 
 [tasks]
 build = "jlpm run build"
-build_lite = { cmd = ["jupyter lite build"], depends_on = ["install"] }
+build_lite = { cmd = "jupyter lite build", depends_on = ["install"] }
 copy_favicon = "cp ./favicon.ico ./_output/lab/favicon.ico"
 develop = "jlpm run develop"
 install_editable = "pip install -e ."
