--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,18 @@ name: Build
 
 on:
   push:
-    branches: main
+    branches:
+      - main
   pull_request:
-    branches: '*'
+    branches:
+      - '*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Base Setup
       uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
@@ -47,11 +49,11 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Install Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.8'
+        python-version: '3.10'
         architecture: 'x64'
     - uses: actions/download-artifact@v3
       with:
@@ -63,7 +65,7 @@ jobs:
         sudo rm -rf $(which node)
         sudo rm -rf $(which node)
         pip install myextension.tar.gz
-        pip install jupyterlab
+        pip install -U jupyterlab~=4.0
         jupyter labextension list 2>&1 | grep -ie "@p5-notebook/lab-extension.*OK"
         jupyter labextension list 2>&1 | grep -ie "@p5-notebook/p5-theme-light.*OK"
         jupyter labextension list 2>&1 | grep -ie "@p5-notebook/p5-theme-dark.*OK"
