--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build the extension
         run: |
           set -eux
-          python -m pip install .
+          python -m pip install -e .
 
           jupyter labextension list
           jupyter labextension list 2>&1 | grep -ie "@p5-notebook/lab-extension.*OK"
