Updates to JupyterLite 0.2.0, hatch, pixi (#114)
* Update to Pixi and Hatch

* More updates

* fix cmd

* Fix retro links

* Add notebook

* Update README

* fix config

* Update build workflow

* clean up scripts

* more cleanups

* install editable

* minor fixes

* updates

* update yarn.lock

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ junit.xml
 test.ipynb
 p5_notebook/labextension
 p5_notebook/p5-theme-*
+# pixi environments
+.pixi
+
+# Yarn 3
+.yarn
+.pnp*
+
+_version.py
